# text2sql-agent

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
scripts/: ingest_documents.py
src/: __init__.py  config.py  logging_config.py
src/agent/: __init__.py  core.py  history.py  prompts.py  query_rewriter.py  tools.py  unified_core.py
src/api/: server.py
src/cli/: __init__.py  main.py
src/mcp_client/: __init__.py  client.py  session.py
src/mcp_server/: __init__.py  calculator_tools.py  document_tools.py  server.py  sql_security.py  tools.py
src/rag/: __init__.py  pipeline.py
test_database/address_1/: schema.sql
test_database/bakery_1/: bakery_1.sql
test_database/bbc_channels/: schema.sql
test_database/bike_racing/: schema.sql  schema_old.sql
test_database/boat_1/: schema.sql
test_database/book_1/: schema.sql  schema_old.sql
test_database/book_press/: schema.sql
test_database/book_review/: schema.sql  schema_old.sql
test_database/car_racing/: schema.sql
test_database/car_road_race/: schema.sql
test_database/club_leader/: schema.sql  schema_old.sql
test_database/conference/: schema.sql
test_database/country_language/: schema.sql
test_database/cre_Doc_Workflow/: schema.sql
test_database/cre_Doc_and_collections/: schema.sql
test_database/cre_Students_Information_Systems/: schema.sql
test_database/customers_and_orders/: schema.sql
test_database/district_spokesman/: schema.sql
test_database/e_commerce/: schema.sql
test_database/government_shift/: schema.sql
test_database/headphone_store/: schema.sql
(+37 files in other folders)
