[project]
name = "text2sql-agent"
version = "0.1.0"
description = "Text-to-SQL Agent with MCP architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "openai>=1.0.0",
    "fastapi[standard]>=0.115.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.20.0",
    "aiofiles>=24.1.0",
    # RAG dependencies
    "pymilvus>=2.4.0",
    "pymupdf>=1.24.0",
    "tiktoken>=0.6.0",
    "tqdm>=4.66.0",
]

[project.scripts]
text2sql = "src.cli.main:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]